--- a/Documentation/perceptron.tex
+++ b/Documentation/perceptron.tex
@@ -1,3 +1,7 @@
+% Documentation of the Perceptron Project
+% Subject: Digitaldesign at the Ernst-Abbe-Hochschule Jena
+% Author: Fabian Franz
+
 % Packages and Modules
 \documentclass{report}
 \usepackage{array}
