Add First VHDL Module

--- a/Documentation/perceptron.tex
+++ b/Documentation/perceptron.tex
@@ -156,10 +156,14 @@ the executing hardware. The figure \ref{fig:abstractHardwareDescription} show th
 abstract hardware model. This model show the mentioned frontend and hardware, but also the
 "Top Level Resolver", which distribute the data to either the storage, which holds the data to
 be proceed, or the new settings for the single perceptron activation functions. In the concret
-model, the address line has a size of 8-Bit and the data line a size of 4-Bit. This results
+model, the address line has a size of 9-Bit and the data line a size of 4-Bit. This results
 in a maximum count of 256 perceptrons in 16 layers, if one perceptron of the incomming layer
 is connected with all perceptrons of the previous outgoing layer. The load line tell the single
-perceptrons, that they can storage the new information after addressing.
+perceptrons, that they can storage the new information after addressing. The address line needs to be a
+9-Bit one, causing the fact, that every oerceptron needs 2 informations to store. More related to this
+will be described later. For simlifity purpose, the clock and reset signals for every single module
+is removed in the figure.
+
 % Top Level Hardware Model Diagram
 \begin{figure}[htbp]
     \begin{center}
@@ -254,8 +258,8 @@ perceptrons, that they can storage the new information after addressing.
             \draw[->](samd21.east) ++(0,0.5) -- ++(1.5,0) node[midway,above]{mode};
             \draw[->](samd21.east) -- ++(1.5,0) node[midway,above]{address};
             \draw[->](samd21.east) ++(0,-0.5) -- ++(1.5,0) node[midway,above]{data};
-            \draw[->](resolver.east) ++(0,0.25) -- ++(1.5,0) node[midway,above]{address};
-            \draw[->](resolver.east) ++(0,-0.25) -- ++(1.5,0) node[midway,above]{data};
+            \draw[->](resolver.east) ++(0,0.25) -- ++(1.5,0) node[midway,above]{data};
+            \draw[->](resolver.east) ++(0,-0.25) -- ++(1.5,0) node[midway,above]{load};
             \draw[->](resolver.south) ++(-1.5,0) -- ++(0,-1) node[midway,sloped,right, rotate=90]{address};
             \draw[->](resolver.south) ++(0,0) -- ++(0,-1) node[midway,sloped,right, rotate=90]{data};
             \draw[->](resolver.south) ++(1.5,0) -- ++(0,-1) node[midway,sloped,right, rotate=90]{load};
@@ -282,9 +286,9 @@ perceptrons, that they can storage the new information after addressing.
 
 Every layer of the hardware model consists of a "Layer Resolver", which takes care about the
 signal distribution to every single perceptron. This has the advantage, that the data lines
-inside the single layer model can be recduced. In the concrete hardware model, the 8-Bit
-address line go through all the layer resolvers, which split them in a 4-Bit address line, which
-is connected to every perceptron in the particular layer. The data line stay a 4-Bit and the load
+inside the single layer model can be recduced. In the concrete hardware model, the 9-Bit
+address line go through all the layer resolvers, which split them in a 5-Bit address line, which
+is connected to every perceptron in the particular layer. The data line stay a 5-Bit and the load
 line a 1-Bit connection and are simply y-splitted in the resolver.
 % Layer Level Hardware Model Diagram
 \begin{figure}[htbp]
@@ -341,6 +345,22 @@ line a 1-Bit connection and are simply y-splitted in the resolver.
         \end{tikzpicture}
         \caption{Layer Level Hardware Model}
         \label{fig:layerHardwareModel}
+    \end{center}
+\end{figure}
+
+The perceptron itselfe consist of a two state input control instead of float point calculations. That
+means, that the connection from one perceptron output to an other perceptron input can only be active
+or non active. Furthermore, the second parameter inside the perceptron is the activation function, which
+is basically the summation over a count of input "high" signals. If the summation is greater than a given
+value, the output of the perceptron is pulled "high".
+
+\begin{figure}[htbp]
+    \begin{center}
+        \begin{tikzpicture} [>=latex', node distance = 2cm]
+
+        \end{tikzpicture}
+        \caption{Perceptron Hardware Model}
+        \label{fig:perceptronHardwareModel}
     \end{center}
 \end{figure}
 
